# LPCTestGui

./: .gitignore  CMakeLists.txt  compiler.txt
AppWizard/: AppWizard.AppWizard  CMakeLists.txt  FileList.txt  Gui_App_Wizard108_EmWin614d.AppWizard  NewProject1.~
AppWizard/Resource/Font/: ArialBlack_24_Black_EXT_AA4.xbf  NettoOT_16_Normal_EXT_AA4.c  NotoSans_24_Normal_EXT_AA4.c  Roboto_40_Normal_EXT_AA4.xbf
AppWizard/Resource/Image/: ButtonDarkPressed_100x30.c  ButtonDarkUnpressed_100x30.c  DARK_Button_Down_100x30.c  DARK_Button_Up_100x30.c  DARK_Progbar_Tile_H_Blue_1x16.dta  DARK_Progbar_Tile_H_Gray_1x16.dta  DARK_Rotary_BG_Gray_80x80.dta  DARK_Rotary_Marker_Blue_16x5.dta  DARK_Slider_Shaft_H_Left_Blue_30x16.c  DARK_Slider_Shaft_H_Right_Gray_30x16.c  DARK_Slider_Thumb_Down_22x22.c  DARK_Slider_Thumb_Down_22x22.dta  DARK_Slider_Thumb_Up_22x22.c  DARK_Slider_Thumb_Up_22x22.dta  DARK_Switch_Body_H_Off_55x20.c  DARK_Switch_Body_H_Off_55x20.dta  DARK_Switch_Body_H_On_55x20.c  DARK_Switch_Body_H_On_55x20.dta  DARK_Switch_Thumb_26x26.c  DARK_Switch_Thumb_26x26.dta  MINIBLUE_Rotary_Marker_60x16.dta  Progbar_Block_H_10_Black_160x20.dta  Progbar_Block_H_10_White_160x20.dta  Progbar_Full_H_Green_200x30.c  Progbar_Full_H_Green_200x30.dta  Progbar_Full_H_White_200x30.c  Progbar_Full_H_White_200x30.dta  Rotary_Marker_WhiteBar_10x3.dta  SliderDarkBlueLeft_30x16.c  SliderDarkGrayRight_30x16.c  SliderDarkGrayRight_30x16.dta  SliderDarkThumbUnpressed_22x22.c  back.dta  corsairLogoCubeGif100x100_30fps.c  gif_orig.c  gif_orig.dta
AppWizard/Resource/Keyboard/: SKEYBOARD_NUMPAD.c  SKEYBOARD_NUMPAD.skbd
AppWizard/Resource/Text/: APPW_Language_0.c  APPW_Language_0.txt  APPW_Pattern.c  APPW_Pattern.txt
AppWizard/Simulation/Config/: APPW_X_WIN32.c  GUI_SIM_Win32.h  SIMConf.c
AppWizard/Simulation/GUI_Lib/: AppWizard.h  BUTTON.h  BUTTON_Private.h  CALENDAR.h  CHECKBOX.h  CHECKBOX_Private.h  CHOOSECOLOR.h  CHOOSEFILE.h  DIALOG.h  DROPDOWN.h  DROPDOWN_Private.h  EDIT.h  EDIT_Private.h  FRAMEWIN.h  FRAMEWIN_Private.h  GRAPH.h  GRAPH_Private.h  GUI.h  GUI.lib  GUIDRV_BitPlains.h  GUIDRV_FlexColor.h  GUIDRV_FlexColor_Private.h  GUIDRV_S1D13513.h  GUIDRV_S1D13517.h  GUIDRV_S1D13748.h  GUIDRV_S1D13781.h  GUIDRV_S1D13L01.h  GUIDRV_S1D13L02.h  GUIDRV_S1D13L04.h  GUIDRV_S1D15G00.h  GUIDRV_SH_MEM.h  GUIDRV_SLin.h  GUIDRV_SLinEPD.h  GUIDRV_SLinEPD_Private.h  GUIDRV_SPage.h  GUIDRV_SPage_Private.h  GUIDRV_SSD1322.h  GUIDRV_SSD1926.h  GUIDRV_ST7591_DCache.h  GUIDRV_TemplateI.h  (+72 more)
AppWizard/Simulation/Simulation/: GUISim.lib  GUISim_x64.lib  GUI_SIM_Win32.h  WinMain.c
AppWizard/Source/: APPW_MainTask.c
AppWizard/Source/CustomCode/: Application.h  ID_SCREEN_00_Slots.c  ID_SCREEN_CHOOSE_TEST_Slots.c  ID_SCREEN_MAIN_Slots.c  ID_SCREEN_RUNNING_Slots.c  ID_SCREEN_SCREENSAVER_Slots.c  ID_SCREEN_STANDART_TEST_Slots.c
NewProject/Simulation/GUI_Lib/: EDIT.h  GUI_Private.h  LISTVIEW_Private.h  MULTIEDIT.h  TEXT_Private.h  WM.h
board/: emwin_support.c  pin_mux.c  pin_mux.h
component/serial_manager/: serial_manager.h
gui/: corsairLogoCubeGif100x100_30fps.c  corsairLogoCubeGif100x100_30fps.h  gui.c  gui.h  toggleSwitch.c  toggleSwitch.h
linkerScript/: lpcxpresso54608_emwin_temperature_control_Debug.ld  lpcxpresso54608_emwin_temperature_control_Debug_library.ld  lpcxpresso54608_emwin_temperature_control_Debug_memory.ld
source/: app.c  app.h  cobsEncoder.c  cobsEncoder.h  emwin_temperature_control.c  host_hid_generic.c  host_hid_generic.h  packetProcessor.c  packetProcessor.h  protocol.h  reportDescriptorParser.c  reportDescriptorParser.h  reportExtension.c  reportExtension.h  ringbuffer.c  ringbuffer.h  sdcard_fatfs.c  usbUsagePages.h  usb_host_config.h  version.h
usb/host/: usb_host_devices.c  usb_host_ip3516hs.c
utilities/: fsl_debug_console.c
